# food-classification

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  implementation_plan.md.resolved  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
benchmarks/: benchmark_pipeline.py
downloader/: .gitignore  aihub_downloader.py  archiver.py  bucket_uploader.py  cleanup_manager.py  config.py  extractor.py  image_transformer.py  logger.py  main.py  mock_generator.py  requirements.txt  setup.sh  test.csv  test.ipynb  tt.py
downloader/config/: default.py
downloader/core/: aihub_downloader.py  archiver.py  extractor.py  image_transformer.py
downloader/tests/: mock_generator.py  test.ipynb
downloader/tests/test_data/extracted/샘플/: metadata.json
downloader/utils/: __init__.py  logger.py  utils.py
image-prep-pipeline/: downloader.py  main.py  preprocessor.py
image-prep-worker/: README.md  ROADMAP.md  config.py  config.yaml  main.py  requirements.txt  setup.sh
image_pipeline/: .env.example  README.md  config.py  downloader.py  logger.py  main.py  preprocessor.py  pyproject.toml  setup.sh
image_pipeline/manifests/: download_list.csv  download_list_raw.txt
image_pipeline/tests/: test.py
model_training/: README.md
tests/: benchmark_pipeline.py  conftest.py  test.py
